--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="LGQ" /><meta name="description" content="Hugo theme even example site." /><meta name="keywords" content="Hugo, theme, even" />
+<meta name="author" content="LGQ" /><meta name="description" content="My personal blog about art and tech." /><meta name="keywords" content="Hugo, Blog, liguoqing" />
 
 
 
@@ -39,16 +39,16 @@
 
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Hugo theme even example site." />
+<meta property="og:description" content="My personal blog about art and tech." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="" />
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Hugo theme even example site.">
+<meta itemprop="description" content="My personal blog about art and tech.">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Hugo theme even example site."/>
+<meta name="twitter:description" content="My personal blog about art and tech."/>
 
 <!--[if lte IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js"></script>
@@ -136,7 +136,7 @@
       <div class="social-links">
       <a href="https://github.com/byronwind/" class="iconfont icon-github" title="github"></a>
       <a href="https://dwz.cn/cw1RZrxf" class="iconfont icon-zhihu" title="zhihu"></a>
-  <a href="http://liguoqing.name/index.xml" type="application/rss+xml" class="iconfont icon-rss" title="rss"></a>
+  <a href="https://liguoqing.name/index.xml" type="application/rss+xml" class="iconfont icon-rss" title="rss"></a>
 </div>
 
 <div class="copyright">
